--- a/views/tradingeconomics.pug
+++ b/views/tradingeconomics.pug
@@ -1,6 +1,8 @@
 doctype html
 html
 	head
+		meta(name='viewport', content='width = device-width')
+		link(rel="stylesheet" href="/css/tradingeconomics.css")
 		title Invest Data
 	body
 		h1 Invest Data
@@ -12,7 +14,8 @@ html
 		button(id='1y') 1y
 		button(id='5y') 5y
 		button(id='10y') 10y
-		button(id='alltime') all time
+		button(id='50y') 50y
+		button(id='150y') 150y
 		table(width="100%")
 			tr
 				td(width="50%")
